Added touch support.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,12 @@
 		
 		<script src="/PongClient.js"></script>
 
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name = "viewport" content = "width = 1120, user-scalable = no">
+		
+		<title>Pong!</title>
+
 		<script>
 		$(document).ready(function() {
 			
